[package]
name = "ocl-sort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[dependencies.opencl3]
version = "0.8.1"
features = ["CL_VERSION_1_1", "CL_VERSION_1_2"]
default-features = false